--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,55 +3,72 @@
     padding: 2px;
 }
 
-header{
-    background-color: #00c6c2;
-    padding:0%;
-    margin: 0%;
+header {
     display: flex;
-    flex-direction: row;
+    align-items: center;
     justify-content: center;
-    align-items: baseline;  
-    
-   
-}
-#parent{
+    background-color: #00e5ff;
+    width: 900px;
+    height: 100px;
+    border-radius: 10px;
+    margin: 20px auto;
+    padding: 20px;
+  }
+
+  i {
+    font-size: 50px;
+    margin-right: 20px;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+  #parent {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #007cb2;
+    box-shadow: 2px 2px 5px #000000;
+    margin: 20px;
+    padding: 20px;
+  }
 
-}
+  .left-container {
+    width: 30%;
+    border-right: 1px solid #007f77c3;
+    padding: 20px;
+  }
 
+  .right-container {
+    width: 70%;
+    padding: 20px;
+  }
 
-.left-container{
-    width: 15%;
+  .search-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
 
-}
+  input[type="text"] {
+    width: 80%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #000000;
+    padding: 5px;
+  }
 
-.right-container{
-  width: 85%;
+  .search-button {
+    width: 20%;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #000000;
+    background-color: #01c6f7;
+    padding: 5px;
+    cursor: pointer;
+  }
 
-}
-
-.search-bar{
-    
-}
-
-.center-container{
-    text-align: center;
-    font-size: larger;
-    padding: 2%;
-    
-
-}
-
-.day-container{
-
-    
-}
-
-.col{
-    background-color: cadetblue;
-    padding: 3%;
-    border: 11px solid #003891;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
+  .city-history {
+    margin-top: 20px;
+  }
